--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- Toolbar -->
-<div class="toolbar mt-2 flex" role="banner">
+<div class="toolbar" role="banner">
   <img
     width="40"
     alt="Angular Logo"
