--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,7 +8,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-h1,
+h1 {
+  margin: 0px;
+  text-align: center;
+}
+
 h2,
 h3,
 h4,
@@ -19,42 +23,6 @@ h6 {
 
 p {
   margin: 0;
-}
-
-.spacer {
-  flex: 1;
-}
-
-.toolbar {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 60px;
-  display: flex;
-  align-items: center;
-  background-color: #1976d2;
-  color: white;
-  font-weight: 600;
-}
-
-.toolbar img {
-  margin: 0 16px;
-}
-
-.toolbar #twitter-logo {
-  height: 40px;
-  margin: 0 8px;
-}
-
-.toolbar #youtube-logo {
-  height: 40px;
-  margin: 0 16px;
-}
-
-.toolbar #twitter-logo:hover,
-.toolbar #youtube-logo:hover {
-  opacity: 0.8;
 }
 
 .content {
@@ -268,6 +236,11 @@ svg#clouds {
   left: -230px;
   z-index: -10;
   width: 1920px;
+}
+
+mat-drawer-container {
+  overflow: hidden;
+  height: 100vh;
 }
 
 /* Responsive Styles */
