--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,8 +11,8 @@ $tailwind-colors: (
   'red': #d33e3e,
 );
 
-$job-finder-diman-primary: mat.define-palette(mat.$indigo-palette);
-$job-finder-diman-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$job-finder-diman-primary: mat.define-palette(mat.$blue-palette);
+$job-finder-diman-accent: mat.define-palette(mat.$green-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
 $job-finder-diman-warn: mat.define-palette(mat.$red-palette);
@@ -45,4 +45,15 @@ body {
 body {
   margin: 0;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
+
+a,
+a:visited,
+a:hover {
+  color: #1976d2;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #125699;
 }
