--- a/src/app/jobs/jobs.component.html
+++ b/src/app/jobs/jobs.component.html
@@ -1,1 +1,5 @@
-<p>jobs works!</p>
+<ul class="flex w-full flex-col gap-3">
+  <li *ngFor="let job of jobs; trackBy: trackById">
+    <app-job-item [job]="job"></app-job-item>
+  </li>
+</ul>
