--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,13 +3,13 @@
     <button mat-icon-button aria-label="toggle-menu" (click)="toggleDrawer()">
       <mat-icon>menu</mat-icon>
     </button>
-    <span class="mt-[7px]">Diman Job Finder</span>
+    <button [routerLink]="'/home'" class="mt-[7px]">Diman Job Finder</button>
   </div>
   <div>
-    <button *ngIf="user" mat-icon-button class="favorite-icon" aria-label="toggle favorites">
+    <button *ngIf="user" mat-icon-button class="favorite-icon" aria-label="toggle favorites" (click)="closeDrawer()">
       <mat-icon>favorite</mat-icon>
     </button>
-    <button mat-icon-button class="user-icon" aria-label="toggle user">
+    <button mat-icon-button class="user-icon" aria-label="toggle user" (click)="accountBtnAction()">
       <mat-icon>person</mat-icon>
     </button>
   </div>
