feat: application-item implementation

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -61,3 +61,7 @@ a:hover {
 .mat-mdc-tab-body-content {
   overflow: hidden !important;
 }
+
+.mdc-dialog__actions {
+  padding: 0 24px 20px 0 !important;
+}
