--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,8 +12,11 @@
           <mat-icon>{{ user ? 'cases' : 'home' }}</mat-icon> {{ user ? 'Jobs' : 'Home' }}
         </button>
       </mat-list-item>
+      <mat-list-item (click)="toggleDrawer()" [routerLink]="'/applications'">
+        <button mat-button><mat-icon>apps</mat-icon> Applications</button>
+      </mat-list-item>
       <mat-list-item *ngIf="user" (click)="toggleDrawer(); logout()">
-        <button mat-button><mat-icon>person</mat-icon> Logout</button>
+        <button mat-button><mat-icon>no_meeting_room</mat-icon> Logout</button>
       </mat-list-item>
     </mat-nav-list>
   </mat-drawer>
