--- a/src/app/favorite-jobs/favorite-jobs.component.html
+++ b/src/app/favorite-jobs/favorite-jobs.component.html
@@ -1,4 +1,5 @@
-<ul class="flex w-full flex-col gap-3">
+<h3 class="mb-3 text-[36px] font-bold">Favorite jobs</h3>
+<ul class="flex w-full flex-col gap-5">
   <li *ngFor="let job of jobs; trackBy: trackById">
     <app-job-item [job]="job"></app-job-item>
   </li>
