--- a/src/app/job-item/job-item.component.html
+++ b/src/app/job-item/job-item.component.html
@@ -3,11 +3,9 @@
     <div class="flex w-full flex-wrap items-center justify-between gap-2">
       <h3 class="text-[24px] font-bold">{{ job.title }}</h3>
       <div class="flex items-center justify-between gap-2">
-        <!-- Add Task Button -->
-        <button mat-button>
+        <button mat-button (click)="openDialog()">
           <mat-icon>add_task</mat-icon>
         </button>
-        <!-- Like Button -->
         <button mat-button (click)="toggleLike()">
           <mat-icon>{{ job.isLiked ? 'favorite' : 'favorite_outline' }}</mat-icon>
         </button>
