--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,7 @@
   </div>
   <div>
     <button
-      *ngIf="user"
+      *ngIf="user && user?.roles[0] === 'USER'"
       mat-icon-button
       class="favorite-icon"
       aria-label="toggle favorites"
