--- a/src/app/job-apply/job-apply.component.html
+++ b/src/app/job-apply/job-apply.component.html
@@ -1,8 +1,4 @@
-<form
-  id="jobApplyForm"
-  class="login-form flex w-full flex-col gap-3"
-  [formGroup]="jobApplyForm"
-  (ngSubmit)="onSubmit()">
+<form [attr.id]="formName" class="flex w-full flex-col gap-3" [formGroup]="jobApplyForm" (ngSubmit)="onSubmit()">
   <mat-form-field>
     <mat-label>Cover letter</mat-label>
     <textarea
