--- a/src/app/favorite-jobs/favorite-jobs.component.html
+++ b/src/app/favorite-jobs/favorite-jobs.component.html
@@ -4,3 +4,4 @@
     <app-job-item [job]="job"></app-job-item>
   </li>
 </ul>
+<p *ngIf="jobs?.length === 0" class="text-[24px] font-semibold">No favorite jobs...</p>
