feat: jobs applications functionality, styling

--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -25,6 +25,6 @@
     <mat-icon>delete</mat-icon> Delete
   </button>
   <button mat-raised-button class="logout-btn mb-5 text-right font-semibold" (click)="logout()">
-    <mat-icon>no_meeting_room</mat-icon> Logout
+    <mat-icon>logout</mat-icon> Logout
   </button>
 </div>
