--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
         <button mat-button><mat-icon>people</mat-icon> Applicants</button>
       </mat-list-item>
       <mat-list-item *ngIf="user" (click)="toggleDrawer(); logout()">
-        <button mat-button><mat-icon>no_meeting_room</mat-icon> Logout</button>
+        <button mat-button><mat-icon>logout</mat-icon> Logout</button>
       </mat-list-item>
     </mat-nav-list>
   </mat-drawer>
